Fixed spacing a little more

--- a/views/superLogin.css
+++ b/views/superLogin.css
@@ -25,7 +25,7 @@ html {
 }
 
 .sign_up_card {
-    height: 450px;
+    height: 400px;
     width: 350px;
     margin-top: auto;
     margin-bottom: auto;
